--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -2,6 +2,7 @@ div {
     border-radius: 6px;
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    margin: 0.35rem;
   }
   
   button {
@@ -15,7 +16,7 @@ div {
     font: inherit;
     cursor: pointer;
     width: 100%;
-    min-width: 10rem;
+    min-width: 12rem;
     text-align: left;
   }
   
